# brum-ros-packages

./: .gitignore  LICENSE  README.md
brum_bringup/: CMakeLists.txt  package.xml
brum_bringup/config/: brum_telemetrix_config.yaml
brum_bringup/launch/: brum_telemetrix.launch.xml
brum_camera/: CMakeLists.txt  README.md  package.xml
brum_camera/config/: uncalibrated_parameters.ini
brum_camera/launch/: camera.launch.xml
brum_control/: CMakeLists.txt  package.xml
brum_control/config/: brum_controllers.yaml
brum_description/: CMakeLists.txt  package.xml
brum_description/config/: develop.rviz  display.rviz
brum_description/launch/: description.launch.xml  display.launch.xml  gazebo.launch
brum_description/meshes/: laser_link.STL  sensor_plate_link.STL
brum_description/urdf/: brum.urdf.xacro  brum_base.urdf  brum_description.csv  camera.urdf.xacro  caster.urdf.xacro  frame.urdf.xacro  lidar.urdf.xacro  powerbank.urdf.xacro  sensor_plate.urdf.xacro  wheels.urdf.xacro
brum_navigation/: CMakeLists.txt  package.xml
brum_navigation/config/: mapper_params_online_async.yaml  slam.rviz
brum_navigation/launch/: slam.launch.xml
